--- a/package.json
+++ b/package.json
@@ -14,6 +14,10 @@
   "dependencies": {
     "@babel/polyfill": "^7.8.3",
     "@hapi/hapi": "^19.1.1",
+    "@hapi/inert": "^6.0.1",
+    "@hapi/joi": "^17.1.0",
+    "@hapi/vision": "^6.0.0",
+    "hapi-swagger": "^12.1.0",
     "lodash": "^4.17.15"
   },
   "devDependencies": {
@@ -26,6 +30,7 @@
     "eslint-config-airbnb-base": "^14.0.0",
     "eslint-config-prettier": "^6.10.0",
     "eslint-plugin-import": "^2.20.1",
+    "eslint-plugin-jest": "^23.7.0",
     "eslint-plugin-prettier": "^3.1.2",
     "filter-files": "^0.4.0",
     "is-directory": "^0.3.1",
