--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -26,7 +26,7 @@ jobs:
         node-version: ${{ matrix.node-version }}
     - name: Yarn CLI
       uses: CultureHQ/actions-yarn@v1.0.1
-    - run: yarn isntall
+    - run: yarn install
     - run: yarn test
       env:
         CI: true
