--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -24,9 +24,7 @@ jobs:
       uses: actions/setup-node@v1
       with:
         node-version: ${{ matrix.node-version }}
-    - name: Yarn CLI
-      uses: CultureHQ/actions-yarn@v1.0.1
-    - run: yarn install
-    - run: yarn test
+    - run: npm install
+    - run: npm run test
       env:
         CI: true
